feat: enhance packaging and startup scripts, add Python portable support
- Updated `.gitignore` to include `python-portable/` and `big_data/`.
- Modified `build-package.bat` to copy the portable Python environment if available, improving flexibility for users.
- Enhanced `start-all.bat` to prioritize the portable Python executable and provide clearer error messages for missing Python installations.
- Updated `index.html` to reflect automatic loading of VRM models and improved user instructions.
- Added health check endpoint to `SenseVoice` API for better service monitoring.
- Removed outdated documentation files and streamlined usage instructions.

--- a/更新日志.md
+++ b/更新日志.md
@@ -1,6 +1,27 @@
 # AI-EVA Demo 更新日志
 
-## v1.1.0 - 2024年更新
+## v1.2.0 - 2025.12.16
+
+### 🎉 新功能
+
+#### GUI 启动器
+- ✅ 新增图形化界面启动器（`ai_eva_launcher.py`）
+- ✅ 一键启动所有服务
+- ✅ 一键停止所有服务
+- ✅ **每个服务独立启动/停止按钮** ✨
+- ✅ 实时显示服务状态
+- ✅ 运行日志查看
+- ✅ 自动检查依赖和端口
+- ✅ 自动打开浏览器
+- ✅ 后台运行服务（不显示命令行窗口）
+- ✅ 支持单独重启某个服务，不影响其他服务
+
+#### 服务管理
+- ✅ 新增 `停止所有服务.bat` 脚本
+- ✅ 智能检测和终止占用端口的进程
+- ✅ 优雅停止服务
+
+## v1.1.0 - 2025.11.17
 
 ### 🎉 新功能
 
@@ -36,46 +57,4 @@
 - ✅ 改进了错误处理和提示信息
 - ✅ 增强了服务状态检测
 - ✅ 优化了代码结构，提高可维护性
-
-### 📝 使用说明
-
-#### 打包项目
-```bash
-# 运行打包脚本
-build-package.bat
-
-# 打包完成后会生成 AI-EVA-Demo 目录
-# 可以将整个目录压缩分发
-```
-
-#### 使用打包后的程序
-1. 解压到任意目录
-2. 双击 `启动.bat`
-3. 等待服务启动（约10-15秒）
-4. 浏览器会自动打开，或手动访问 http://localhost:8000
-
-#### 新功能使用
-1. **切换角色**：在设置面板中选择不同的角色配置
-2. **口型同步**：播放TTS语音时，VRM模型会自动同步口型
-3. **陪伴对话**：AI回复更加温暖、陪伴，主动关心用户
-
-### ⚠️ 注意事项
-
-- 首次运行需要安装依赖（自动安装）
-- 需要先安装 Ollama 并下载模型：`ollama pull gemma2:2b`
-- 确保端口 8000、9966、50000、11434 未被占用
-- VRM 模型文件需要用户自行准备
-
-### 🐛 已知问题
-
-- 某些浏览器可能不支持 Web Audio API，会降级到简单口型动画
-- 口型同步效果取决于VRM模型的BlendShape配置
-
-### 📦 文件变更
-
-- `index.html` - 添加口型同步和对话系统改进
-- `start-all.bat` - 改进启动脚本
-- `build-package.bat` - 新增打包脚本
-- `打包说明.md` - 新增打包文档
-- `更新日志.md` - 本文件
 
